Migrate to Apache Pekko

--- a/config_example/application.conf
+++ b/config_example/application.conf
@@ -1,5 +1,5 @@
-# https://doc.akka.io/docs/akka/current/cluster-usage.html
-akka {
+# https://pekko.apache.org/docs/pekko/current/cluster-usage.html
+pekko {
   actor {
     provider = "cluster"
   }
@@ -14,10 +14,10 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka://MyClusterSystem@127.0.0.1:2551",
-      "akka://MyClusterSystem@127.0.0.1:2552"
+      "pekko://MyClusterSystem@127.0.0.1:2551",
+      "pekko://MyClusterSystem@127.0.0.1:2552"
     ]
 
-    downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+    downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
   }
 }
